--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "react": "^16.13.1",
-    "react-datetime-picker": "^3.0.2",
+    "react-calendar": "^3.1.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
